--- a/style.css
+++ b/style.css
@@ -140,6 +140,10 @@
     line-height: 16px;
 }
 
+.fs-15 {
+    font-size: 15px;
+}
+
 .fs-17 {
     font-size: 17px;
     line-height: 19px;
@@ -159,6 +163,10 @@
 
 .tc-grey {
     color: rgba(92, 87, 97, 0.83);
+}
+
+.tc-purple{
+    color: #615EFF !important;
 }
 
 .modal-header {
@@ -258,6 +266,21 @@
     max-height: 676px;
     width: 573px;
 }
+
+.checkbox-primary {
+    width: 18.5px !important;
+    height: 18.5px !important;
+}
+.checkbox-primary:checked:before {
+    color: #615EFF !important;
+    top: 0px !important;
+    left: 3px !important;
+    font-size: 11px !important;
+}
+.checkbox-primary:checked {
+    border: 1.5px solid #615EFF !important;
+}
+
 
 .checkbox {
     position: relative;
@@ -564,6 +587,10 @@ input:checked + .slider:before {
         font-size: 12px;
         line-height: 14px;
     }
+
+    .fs-15{
+        font-size: 12px !important;
+    }
     
     .fs-17 {
         font-size: 15px;
@@ -594,6 +621,20 @@ input:checked + .slider:before {
         margin-top: 05px;
     }
 
+    .checkbox-primary {
+        width: 14.5px !important;
+        height: 14.5px !important;
+    }
+    .checkbox-primary:checked:before {
+        color: #615EFF !important;
+        top: 0px !important;
+        left: 2px !important;
+        font-size: 09px !important;
+    }
+    .checkbox-primary:checked {
+        border: 1px solid #615EFF !important;
+    }
+
     .sub-cat {
         margin-left: 06px;
         font-size: 10px; 
@@ -609,6 +650,8 @@ input:checked + .slider:before {
         padding: 5px !important;
         padding-left: 12px !important;
     }
+
+    
 
     .add-client-btn {
         width: 155px; 
@@ -641,6 +684,11 @@ input:checked + .slider:before {
         width: 170px !important;
     }
 
+    .set-img{
+        height: 30px !important;
+        width: 30px !important;
+    }
+
     .p-3 {
         padding: 10px !important;
     }
@@ -653,6 +701,10 @@ input:checked + .slider:before {
     .fs-14 {
         font-size: 11px;
         line-height: 13px;
+    }
+
+    .fs-15{
+        font-size: 10px !important;
     }
     
     .fs-17 {
